--- a/app/src/main/res/layout/jokes_fragment.xml
+++ b/app/src/main/res/layout/jokes_fragment.xml
@@ -6,9 +6,9 @@
     tools:context=".JokesFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+   <androidx.recyclerview.widget.RecyclerView
+       android:id="@+id/jokeRecyclerView"
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"/>
 
 </FrameLayout>
